<resources>
    <string name="app_name">3STechLabs IoT Starter</string>
    <string name="main_activity_title">Light Sensor Data</string>
    <string name="about_us_info">For more information about us, please visit our website</string>
    <string name="website_btn">Website</string>
    <string name="app_icon_description">Application icon</string>
    <string name="settings_btn">Settings</string>
    <string name="about_us_btn">About Us</string>
    <string name="stop_btn">Stop</string>
    <string name="start_btn">Start</string>
    <string name="save_btn">Save</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="topic">Topic</string>
</resources>